[project]
name = "llama3-2-vision-example"
version = "0.1.0"
description = "A basic example of a Llama3.2 vision application!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.2",
    "ollama>=0.4.8",
    "pillow>=11.2.1",
]
